--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="content">
             <h3>ABHISHEK KUMAR </h3>
             <p>I'm a java developer and Cloud Enthusiast</p>
-            <a href="./resume.pdf" class="btn">Download CV</a>
+            <a href="./Abhishek Kumar.res (2).pdf" class="btn">Download CV</a>
         </div>
         <div class="share">
             <a href="" class="fab fa-facebook-f"></a>
